update index with front-matter

--- a/index.html
+++ b/index.html
@@ -1,20 +1,7 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Ida P - Learning Journey</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
+---
+layout: default
+title: Ida - Learning Journey
+---
     		<div class="blurb">
         		<h1>Hi there, I'm Ida!</h1>
 				<p>This is my online portfolio and <em>learning journey</em> You want to now about me? <a href="/about">Read more about my life...</a></p>
